--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import "@fontsource/kumbh-sans";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,4 +26,5 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: Kumbh Sans;
 }
